disentangle CLI mode and MP logic